[package]
name = "transcribe-cpp"
version = "0.0.0"
edition = "2021"
description = "Rust bindings for transcribe.cpp (pre-release name reservation placeholder)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/handy-computer/transcribe.cpp"
homepage = "https://github.com/handy-computer/transcribe.cpp"
keywords = ["transcription", "speech", "asr", "stt", "ggml"]
categories = ["multimedia::audio", "api-bindings"]

[lib]
name = "transcribe_cpp"
path = "src/lib.rs"
