[package]
name = "transcribe-cpp-sys"
version = "0.0.0"
edition = "2021"
description = "Native FFI bindings for transcribe.cpp (pre-release name reservation placeholder)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/handy-computer/transcribe.cpp"
homepage = "https://github.com/handy-computer/transcribe.cpp"
keywords = ["transcription", "speech", "asr", "stt", "ggml"]
categories = ["multimedia::audio", "external-ffi-bindings"]

[lib]
name = "transcribe_cpp_sys"
path = "src/lib.rs"
