[project]
name = "transcribe-parakeet-env"
version = "0.1.0"
description = "Python env for Parakeet TDT reference dumps via NeMo"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.2",
    "nemo-toolkit[asr]==2.7.3",
    "huggingface-hub>=0.20",
    "soundfile>=0.12",
    "numpy>=1.26",
    "sentencepiece>=0.2",
    "gguf>=0.10.0",
]
